📝 Restore README Synopsis/Usage/Configuration sections
Content was destroyed by a now-fixed templating bug.
Restored from the last good commit in git history.

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>